--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.6",
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
+    "clsx": "^2.1.1",
     "formik": "^2.4.9",
     "modern-normalize": "^3.0.1",
     "nanoid": "^5.1.6",
@@ -19,9 +23,10 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.11.0",
     "react-spinners": "^0.17.0",
     "redux-persist": "^6.0.0",
-    "yup": "^1.7.1"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
